# WraithRun

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml  mkdocs.yml  wraithrun.example.toml
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  labels.yml  milestones.yml  release-drafter.yml  release.yml  security.yml  wraithrun-scan.example.yml
api_server/: Cargo.toml
api_server/src/: audit.rs  dashboard.html  data_store.rs  lib.rs  routes.rs  state.rs
ci-templates/: gitlab-ci.yml  wraithrun-scan.sh
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: community_e2e.rs  stdin_integration.rs
core_engine/: Cargo.toml
core_engine/src/: agent.rs  lib.rs  output_formats.rs
cyber_tools/: Cargo.toml
cyber_tools/src/: account_audit.rs  lib.rs  log_parser.rs  network_scanner.rs  persistence_checker.rs  plugin.rs  process_correlation.rs
cyber_tools/tests/: eventlog_smoke.rs  new_tools_smoke.rs
docs/: CI_CD.md  READTHEDOCS_SETUP.md  RELEASE_PLAN.md  USAGE_EXAMPLES.md  automation-contracts.md  automation-workflows.md  ci-integration.md  cli-reference.md  getting-started.md  index.md  live-mode-operations.md  mitre-attack-mapping.md  playbook-credential-leak.md  playbook-persistence-sweep.md  playbook-ssh-keys.md  playbook-windows-triage.md  plugin-api.md  sample-report-linux-persistence.md  sample-report-windows-triage.md  security-sandbox.md  threat-model.md  tool-reference.md  troubleshooting.md  upgrades.md
docs/schemas/: automation-adapter-findings-v1.schema.json  doctor-introspection.schema.json  profile-list-introspection.schema.json  run-report.schema.json  task-template-list-introspection.schema.json  tool-list-introspection.schema.json
docs/schemas/examples/: automation-adapter-findings-v1.example.json  doctor-introspection.example.json  profile-list-introspection.example.json  run-report.example.json  task-template-list-introspection.example.json  tool-list-introspection.example.json
examples/tools/hello_world/: hello_world.sh  tool.toml
inference_bridge/: Cargo.toml
inference_bridge/src/: backend.rs  lib.rs  onnx_vitis.rs
inference_bridge/tests/: backend_conformance.rs
packaging/windows/: wraithrun.wxs
scripts/: live-smoke-matrix.ps1
test_outputs/: test_server.db-shm  test_server.db-wal
