[workspace]
members = [
    "core_engine",
    "inference_bridge",
    "cyber_tools",
    "cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tar = "0.4"