[workspace]
members = [
    "core_engine",
    "inference_bridge",
    "cyber_tools",
    "cli",
    "api_server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "process", "time", "net", "io-util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rusqlite = { version = "0.35", features = ["bundled", "backup"] }
tar = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }