[package]
name = "api_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
core_engine = { path = "../core_engine" }
cyber_tools = { path = "../cyber_tools" }
inference_bridge = { path = "../inference_bridge" }

[dev-dependencies]
tower = "0.5"
