[package]
name = "wraithrun"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
core_engine = { path = "../core_engine" }
cyber_tools = { path = "../cyber_tools" }
inference_bridge = { path = "../inference_bridge" }