[package]
name = "wraithrun"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
onnx = ["inference_bridge/onnx"]
vitis = ["inference_bridge/vitis"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tar.workspace = true
core_engine = { path = "../core_engine" }
cyber_tools = { path = "../cyber_tools" }
inference_bridge = { path = "../inference_bridge" }