[package]
name = "core_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
cyber_tools = { path = "../cyber_tools" }
inference_bridge = { path = "../inference_bridge" }

[dev-dependencies]
async-trait.workspace = true
