[package]
name = "inference_bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
vitis = ["dep:ort", "dep:tokenizers", "dep:half"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "load-dynamic", "api-22", "vitis", "half"] }
tokenizers = { version = "0.22.2", optional = true }
half = { version = "2", optional = true }
