[package]
name = "inference_bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
onnx = ["dep:ort", "dep:tokenizers", "dep:half"]
vitis = ["onnx", "ort/vitis"]
directml = ["onnx", "ort/directml"]
coreml = ["onnx", "ort/coreml"]
cuda = ["onnx", "ort/cuda"]
tensorrt = ["cuda", "ort/tensorrt"]
qnn = ["onnx", "ort/qnn"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "load-dynamic", "api-22", "half"] }
tokenizers = { version = "0.22.2", optional = true }
half = { version = "2", optional = true }
rand = "0.8"
